--- a/libraries.css
+++ b/libraries.css
@@ -28,8 +28,8 @@
 
 @font-face {
     font-family: icomoon;
-    src: url(../fonts/icomoon.eot);
-    src: url(../fonts/icomoon2.eot) format("embedded-opentype"), url(../fonts/icomoon2.ttf) format("truetype"), url(../fonts/icomoon2.woff) format("woff"), url(../fonts/icomoon2.svg) format("svg");
+    src: url('https://nweb.truebays.com/wp-content/themes/techengage/assets/fonts/icomoon.eot');
+    src: url(https://nweb.truebays.com/wp-content/themes/techengage/assets/fonts/icomoon2.eot) format("embedded-opentype"), url(https://nweb.truebays.com/wp-content/themes/techengage/assets/fonts/icomoon2.ttf) format("truetype"), url(https://nweb.truebays.com/wp-content/themes/techengage/assets/fonts/icomoon2.woff) format("woff"), url(https://nweb.truebays.com/wp-content/themes/techengage/assets/fonts/icomoon2.svg) format("svg");
     font-weight: 400;
     font-style: normal;
     font-display: swap;
