--- a/style.css
+++ b/style.css
@@ -8045,3 +8045,14 @@ a.nav__item-link.dropdown-menu-title {
 input.wpcf7-form-control.wpcf7-file.wpcf7-validates-as-required {
     padding-top: 10px;
 }
+
+
+.footer .contact-list li a {
+    color: #fff;
+}
+
+
+.footer .contact-list li {
+    color: #fff;
+}
+
