--- a/style.css
+++ b/style.css
@@ -8056,4 +8056,10 @@ input.wpcf7-form-control.wpcf7-file.wpcf7-validates-as-required {
     height: 43px;
 }
 
-
+.footer .wpcf7-submit:hover {
+    color: #00c881 !important;
+    background: #ffffff!important;
+    -webkit-transition: ease-out 0.4s;
+    -moz-transition: ease-out 0.4s;
+    transition: ease-out 0.4s;
+}
