--- a/style.css
+++ b/style.css
@@ -8068,3 +8068,8 @@ input.wpcf7-form-control.wpcf7-file.wpcf7-validates-as-required {
 .footer input.wpcf7-form-control.wpcf7-text.wpcf7-email.wpcf7-validates-as-required.wpcf7-validates-as-email {
     color: #fff !important;
 }
+.tstm-header 
+{
+font-size: 40px !important;
+color: #000 !important;
+}
