--- a/style.css
+++ b/style.css
@@ -8071,5 +8071,5 @@ input.wpcf7-form-control.wpcf7-file.wpcf7-validates-as-required {
 .tstm-header 
 {
 font-size: 40px !important;
-color: #000 !important;
+color: #0b2653 !important;
 }
