--- a/libraries2.css
+++ b/libraries2.css
@@ -18,8 +18,8 @@
 /* Template custom icon Font*/
 @font-face {
     font-family: icomoon;
-    src: url('https://nweb.truebays.com/wp-content/themes/techengage/assets/fonts/icomoon.eot');
-    src: url('https://nweb.truebays.com/wp-content/themes/techengage/assets/fonts/icomoon.eot') format("embedded-opentype"), url('https://nweb.truebays.com/wp-content/themes/techengage/assets/fonts/icomoon.ttf') format("truetype"), url('https://nweb.truebays.com/wp-content/themes/techengage/assets/fonts/icomoon.woff') format("woff"), url('https://nweb.truebays.com/wp-content/themes/techengage/assets/fonts/icomoon.svg') format("svg");
+    src: url('https://www.truebays.com/wp-content/themes/techengage/assets/fonts/icomoon.eot');
+    src: url('https://www.truebays.com/wp-content/themes/techengage/assets/fonts/icomoon.eot') format("embedded-opentype"), url('https://www.truebays.com/wp-content/themes/techengage/assets/fonts/icomoon.ttf') format("truetype"), url('https://www.truebays.com/wp-content/themes/techengage/assets/fonts/icomoon.woff') format("woff"), url('https://www.truebays.com/wp-content/themes/techengage/assets/fonts/icomoon.svg') format("svg");
     font-weight: 400;
     font-style: normal;
     font-display: swap;
@@ -28,8 +28,8 @@
 
 @font-face {
     font-family: icomoon;
-    src: url('https://nweb.truebays.com/wp-content/themes/techengage/assets/fonts/icomoon.eot');
-    src: url(https://nweb.truebays.com/wp-content/themes/techengage/assets/fonts/icomoon2.eot) format("embedded-opentype"), url(https://nweb.truebays.com/wp-content/themes/techengage/assets/fonts/icomoon2.ttf) format("truetype"), url(https://nweb.truebays.com/wp-content/themes/techengage/assets/fonts/icomoon2.woff) format("woff"), url(https://nweb.truebays.com/wp-content/themes/techengage/assets/fonts/icomoon2.svg) format("svg");
+    src: url('https://www.truebays.com/wp-content/themes/techengage/assets/fonts/icomoon.eot');
+    src: url(https://www.truebays.com/wp-content/themes/techengage/assets/fonts/icomoon2.eot) format("embedded-opentype"), url(https://www.truebays.com/wp-content/themes/techengage/assets/fonts/icomoon2.ttf) format("truetype"), url(https://www.truebays.com/wp-content/themes/techengage/assets/fonts/icomoon2.woff) format("woff"), url(https://www.truebays.com/wp-content/themes/techengage/assets/fonts/icomoon2.svg) format("svg");
     font-weight: 400;
     font-style: normal;
     font-display: swap;
